# Crypto-Pi

./: .gitignore  README.md  pyproject.toml  ticker.py
data/: coins_list.json
src/: crypto.py  ticker_display.py  ticker_icons.py
test/: data.out  framebuffer.py
